@@ -19,10 +19,11 @@
   </tr>
 [% END %]
 
-  <tr onclick="location='conf.cgi?sub=objects&amp;action=history&id=[% l.id %]&dir=[% dir %]'">
+  [% link = "conf.cgi?sub=objects&amp;action=history&id=" _ l.id _ "&dir=" _ dir %]
+  <tr onclick="location='[% link %]'">
     <td align="right" width=100 valign="top" style="padding-right: 6px; cursor: pointer;" nowrap>[% date_format(c, l.date) %]</td>
     <td align="left" valign="top" style="cursor: pointer;">
-      <a href="conf.cgi?sub=objects&amp;action=history&id=[% l.id %]&dir=[% dir %]">
+      <a href="[% link %]">
       <b>[% l.message %]</b>
       <img width="16" height="16" border="0" style="vertical-align: middle; float: right; margin-right: 5px;" title="details" alt="details" src="[% url_prefix %]thruk/themes/[% theme %]/images/arrow_right.png">
       </a>
