@@ -4,6 +4,7 @@ next:
           - added business process addon
           - show apache status in performance page
           - minemap performance improvements and reduced memory usage
+          - configuration git browser got next and previous links
           - Bug Fixes
             - summary: fixed reports using host/servicegroups in combination with the mysql logcache
             - mysql logcache: fixed service cannot be NULL error on import
